force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__ClassRankText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClassRankText__c</fullName>
    <label>Class Rank</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClassRankText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>