force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__EducationLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__EducationLevel__c</fullName>
    <label>Education Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EducationLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>