force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__GpaScaleNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__GpaScaleNumber__c</fullName>
    <label>GPA Scale</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GpaScaleNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>