force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__GraduationClassSizeCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__GraduationClassSizeCount__c</fullName>
    <label>Graduation Class Size</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GraduationClassSizeCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>