force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__GraduationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__GraduationDate__c</fullName>
    <label>Graduation Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GraduationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>