force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__rel_1719817696649_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817696649_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonEducation_InstitutionAccountId_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>PersonEducation_InstitutionAccountId_rel</relationshipLabel>
    <relationshipName>rel_1719817696649_end</relationshipName>
    <type>Lookup</type>
</CustomField>