force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__rel_1719818169368_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818169368_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonEducation_AccountContactId_map_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>PersonEducation_AccountContactId_map_rel</relationshipLabel>
    <relationshipName>rel_1719818169368_end</relationshipName>
    <type>Lookup</type>
</CustomField>