force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__rel_1720291144776_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291144776_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonEducation_IndividualId_map_Ind_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PersonEducation_IndividualId_map_Ind_rel</relationshipLabel>
    <relationshipName>rel_1720291144776_end</relationshipName>
    <type>Lookup</type>
</CustomField>