force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__SchoolDaysMissedNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SchoolDaysMissedNumber__c</fullName>
    <label>School Days Missed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SchoolDaysMissedNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>